--- a/project1/webapp/view/View1.view.xml
+++ b/project1/webapp/view/View1.view.xml
@@ -2,6 +2,8 @@
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
     xmlns="sap.m">
     <Page id="page" title="{i18n>title}">
-        <content />
+        <content>
+        <Button id="idbtn" text='first button'></Button>
+        </content>
     </Page>
 </mvc:View>
